tooling/nargo_cli/tests/snapshots/compile_failure/unconstrained_ref/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: unused variable e
  ┌─ src/main.nr:8:9
  │
8 │     let e = unsafe { uncon_ref() };
  │         - unused variable
  │

error: Cannot pass a mutable reference from a unconstrained runtime to an constrained runtime
  ┌─ src/main.nr:8:22
  │
8 │     let e = unsafe { uncon_ref() };
  │                      -----------
  │

Aborting due to 1 previous error
