tooling/nargo_cli/tests/snapshots/compile_failure/unconstrained_ref/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: unused variable e
  ┌─ src/main.nr:8:9
  │
8 │     let e = unsafe { uncon_ref() };
  │         - unused variable
  │

error: Cannot pass a reference from an unconstrained runtime to an constrained runtime
  ┌─ src/main.nr:8:22
  │
8 │     let e = unsafe { uncon_ref() };
  │                      -----------
  │

Aborting due to 1 previous error
